--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       <div class="contact-me">
         <h2>Get In Touch</h2>
         <h3></h3>
-        <p>Let me take your websiet from your imagination to your reality</p>
-        <a class="btn" href="andyjamesbell@gmail.com">CONTACT ME</a>
+        <p>Let me take your website from your imagination to your reality</p>
+        <a class="btn" href="mailto:andyjamesbell@gmail.com">CONTACT ME</a>
       </div>
     </div>
 
