--- a/index.html
+++ b/index.html
@@ -1,57 +1,68 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html>
   <head>
     <meta charset="utf-8">
-    <title>Andy Bell</title>
+    <title>Andy's Personal Site</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" href="favicon.ico">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
   </head>
+
   <body>
-  <div class="top-container">
-    <img class="top-cloud"src="images/cloud.png" alt="cloud image">
-    <h1>I'm Andy Bell</h1>
-    <p>I'm a <span class="dev">dev</span>eloper</p>
-    <img class="bottom-cloud"src="images/cloud.png" alt="cloud image">
-    <img src="images/mountain.png" alt="mountain image">
-    </div>
-    <div class="middle-container">
-      <div class="profile">
-        <img class="us"src="images/Just us.png" alt="The family">
-        <h2>Hello.</h2>
-        <p>I'm a full stack web designer/developer based in the south east of England. I'm a passionate photgrapher, creative thinker with an eye for design. I strive to bring your visions to life on a platform that can be seen by all. </p>
-      </div>
-      <hr>
-      <div class="skills">
-        <h2>My Skills.</h2>
-        <div class="skill-row">
-          <img class="Laptop" src="images/computer.png" alt="computer skills">
-          <h3>My Design</h3>
-          <p>Im a devloper with HTML, CSS, Java and Python skills. I keep up todate with the current technolgies which allows me to build clean and simply designed websites that convay the message you want to send.</p>
-        </div>
-        <div class="skill-row">
-          <img class="Photography" src="images/tourist.png" alt="Photography skills">
-          <h3>Photography</h3>
-          <p>Photography has been a passion for some time right from my early days with a 35m camera to now with my DSLR. I have a good eye and a technical approach to taking my pictures. Whether its a night shot over the river Thames capturing the bus lights over a bridge or my son running through a forest with the sun hitting his face. </p>
-        </div>
-      </div>
-      <hr>
-      <div class="contact-me">
-        <h2>Get In Touch</h2>
-        <h3></h3>
-        <p>Let me take your website from your imagination to your reality</p>
-        <a class="btn" href="mailto:andyjamesbell@gmail.com">CONTACT ME</a>
-      </div>
-    </div>
-
-
-    <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/in/andy-bell-b8a50112/">LinkedIn</a>
-      <a class="footer-link" href="https://twitter.com/aandyb97">Twitter</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-      <p>© 2021 Andrew Bell.</p>
-    </div>
+    <table cellspacing="20">
+      <tr>
+        <td><img src="images/just us.png" alt="The fam profile picture"></td>
+        <td><h1>Andy Bell</h1>
+        <p><em>Founder and CTO of <strong><a href="https://www.appbrewery.co/">The App Brewery</a></strong>.</em></p>
+        <p>I am an iOS and Web Developer. I ❤️ coffee and brew my own beers.</p></td>
+      </tr>
+    </table>
+    <hr>
+    <h3>Books and Teaching</h3>
+    <ul>
+      <li>The Complete iOS App Development Bootcamp</li>
+      <li>The Complete Web Development Bootcamp</li>
+    </ul>
+    <hr>
+    <h3>Work Experience</h3>
+    <table cellspacing="10">
+      <thead>
+        <tr>
+          <th>Dates</th>
+          <th>Work</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>2009-2010</td>
+          <td>Researcher at The Institute of Cognitive Neurosciences</td>
+        </tr>
+        <tr>
+          <td>2010-2013</td>
+          <td>Lead Developer at Tempo App</td>
+        </tr>
+        <tr>
+          <td>2013-2015</td>
+          <td>Clinical Doctor at the National Health Service</td>
+        </tr>
+      </tbody>
+    </table>
+    <hr>
+    <h3>Skills</h3>
+    <table cellspacing="10">
+      <tr>
+        <td>iOS Development</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>Web Development</td>
+        <td>⭐️⭐️⭐️⭐️⭐️</td>
+      </tr>
+      <tr>
+        <td>Photography</td>
+        <td>⭐️⭐️</td>
+      </tr>
+    </table>
+    <hr>
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="contact-me.html">Contact Me</a>
   </body>
 </html>
